argocd/infra/sni-router/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sni-router
  annotations:
    io.cilium/lb-ipam-ips: "10.10.8.110"
  labels:
    app: sni-router
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: sni-router
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
